--- a/plugins/plugin-client-common/web/scss/components/Terminal/_mixins.scss
+++ b/plugins/plugin-client-common/web/scss/components/Terminal/_mixins.scss
@@ -31,7 +31,7 @@ $action-width: 2em;
 $focus-color: var(--color-brand-01);
 
 $input-bg: var(--color-base01);
-$input-bg-inverted: var(--color-sidecar-background-01);
+$input-bg-inverted: var(--color-sidecar-background-02);
 $input-border: 1px solid rgba(150, 150, 150, 0.2);
 $input-border-editing: var(--color-brand-03);
 
